--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <title>Resumee</title>
 
-    <link rel="stylesheet" href="Resumee/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
