--- a/ResumeTemplate/index.html
+++ b/ResumeTemplate/index.html
@@ -8,7 +8,7 @@
 
     <!-- CSS | Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="Resumee/ResumeTemplate/style.css">
+    <link rel="stylesheet" href="./ResumeTemplate/style.css">
 
     <link rel="stylesheet" media="print" href="Resumee/ResumeTemplate/print.css">
 
