--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <h1>The <strong style="color: #51e2c2;">Resumee!</strong> getting folks hired by Myntra, Apple, Google,
                     AirBnb, Walmart, Amazon and Microsoft.</h1>
                 <p>Build your brand-new resume in as little as 5 minutes.<br><br><span>Try it for free.</span></p>
-                <a class="btn" style="text-decoration: none;" target="_blank" href="Resumee/ResumeTemplate/index.html">Get Started Now</a>
+                <a class="btn" style="text-decoration: none;" target="_blank" href="./ResumeTemplate/index.html">Get Started Now</a>
                 <p class="credit">No Credit Card required</p>
             </div>
 
