--- a/ResumeTemplate/index.html
+++ b/ResumeTemplate/index.html
@@ -8,9 +8,9 @@
 
     <!-- CSS | Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="ResumeTemplate/style.css">
+    <link rel="stylesheet" href="/ResumeTemplate/style.css">
 
-    <link rel="stylesheet" media="print" href="ResumeTemplate/print.css">
+    <link rel="stylesheet" media="print" href="/ResumeTemplate/print.css">
 
     <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
