--- a/ResumeTemplate/index.html
+++ b/ResumeTemplate/index.html
@@ -790,7 +790,7 @@
         crossorigin="anonymous"></script>
 
     <!-- JS Vanilla -->
-    <script src="/ResumeTemplate/script.js"></script>
+    <script src="./ResumeTemplate/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
     <!-- NO Script-->
