--- a/ResumeTemplate/index.html
+++ b/ResumeTemplate/index.html
@@ -570,7 +570,7 @@
                         <div class="eduSection">
                             <h4 class="text-secondary">EDUCATION</h4>
                             <div class="eduSec">
-                                <p style="font-size: 10px" ><strong id="clgSec">SIPNA COLLEGE OF ENGINEERING AND TECHNOLOGY, AMRAVATI.</strong><br>
+                                <p style="font-size: 10px;" ><strong id="clgSec">SIPNA COLLEGE OF ENGINEERING AND TECHNOLOGY, AMRAVATI.</strong><br>
                                     <span style="font-size: 8px;"><b id="clgBranchSec">BE | IT</b></span><br>
                                     <span class="text-secondary" id="clgYearSec">2020-2024</span><br>
                                     <b id="clgCGPASec">CGPA: 8.2/10 (5th Sem.)</b><br>
