--- a/ResumeTemplate/index.html
+++ b/ResumeTemplate/index.html
@@ -12,11 +12,11 @@
 
     <link rel="stylesheet" media="print" href="./print.css">
 
-    <link rel="icon" type="image/png" sizes="32x32" href="./Resumee/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./Resumee/favicon/favicon-16x16.png">
-    <link rel="icon" type="image/png" sizes="180x180" href="./Resumee/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="192x192" href="./Resumee/favicon/android-chrome-192x192.png">
-    <link rel="icon" type="image/png" sizes="512x512" href="./Resumee/favicon/android-chrome-512x512.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="180x180" href="../favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="../favicon/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="../favicon/android-chrome-512x512.png">
 
     <title>Resume Template Simple</title>
 </head>
