--- a/blogs/how-to-write-cover-letter.html
+++ b/blogs/how-to-write-cover-letter.html
@@ -8,7 +8,7 @@
 
     <title>How to Write a Cover Letter | Resumee</title>
 
-    <link rel="stylesheet" href="Resumee/style.css">
+    <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="./blogs.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
 
