--- a/blogs/how-to-write-cover-letter.html
+++ b/blogs/how-to-write-cover-letter.html
@@ -43,7 +43,7 @@
         <article class="article">
             <h1>How to Write a Cover Letter Like a Professional | Beginners Guide</h1>
             <div class="article-img">
-                <img src="/img/cover-letter-article-img.webp" alt="Cover Letter Article Image">
+                <img src="../img/cover-letter-article-img.webp" alt="Cover Letter Article Image">
             </div>
             <div class="article-content">
                 <p>
@@ -123,7 +123,7 @@
     <footer class="footer-section">
         <div class="outer-foot">
             <div class="inner-foot">
-                <img src="/img/Resume-Footer-Logo.png" alt="Footer Image" class="foot-logo">
+                <img src="../img/Resume-Footer-Logo.png" alt="Footer Image" class="foot-logo">
                 <!-- src="./img/footer-logo.png" -->
                 <p id="inP">Showcase yourself and your achievements with an impressive resume made with the free online
                     resume
@@ -145,10 +145,10 @@
                 <h3>Links <div class="underline"><span></span></div>
                 </h3>
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/index.html#resTemp">Resume Templates</a></li>
-                    <li><a href="/index.html#cvBlogs">CV Blogs</a></li>
-                    <li><a href="/index.html#testMSec">Cover Guidance</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../index.html#resTemp">Resume Templates</a></li>
+                    <li><a href="../index.html#cvBlogs">CV Blogs</a></li>
+                    <li><a href="../index.html#testMSec">Cover Guidance</a></li>
                     <li><a href="#">About US | Contact US</a></li>
                 </ul>
             </div>
