--- a/blogs/how-to-write-resume.html
+++ b/blogs/how-to-write-resume.html
@@ -43,7 +43,7 @@
         <article class="article">
             <h1>How to Write a Resume That Stand Out in 2022 | Beginners Guide</h1>
             <div class="article-img">
-                <img src="/img/resume-article-img.webp" alt="Resume Article Image">
+                <img src="../img/resume-article-img.webp" alt="Resume Article Image">
             </div>
             <div class="article-content">
                 <p>
@@ -174,7 +174,7 @@
     <footer class="footer-section">
         <div class="outer-foot">
             <div class="inner-foot">
-                <img src="/img/Resume-Footer-Logo.png" alt="Footer Image" class="foot-logo">
+                <img src="../img/Resume-Footer-Logo.png" alt="Footer Image" class="foot-logo">
                 <!-- src="./img/footer-logo.png" -->
                 <p id="inP">Showcase yourself and your achievements with an impressive resume made with the free online
                     resume
@@ -196,10 +196,10 @@
                 <h3>Links <div class="underline"><span></span></div>
                 </h3>
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/index.html#resTemp">Resume Templates</a></li>
-                    <li><a href="/index.html#cvBlogs">CV Blogs</a></li>
-                    <li><a href="/index.html#testMSec">Cover Guidance</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../index.html#resTemp">Resume Templates</a></li>
+                    <li><a href="../index.html#cvBlogs">CV Blogs</a></li>
+                    <li><a href="../index.html#testMSec">Cover Guidance</a></li>
                     <li><a href="#">About US | Contact US</a></li>
                 </ul>
             </div>
