--- a/blogs/how-to-write-resume.html
+++ b/blogs/how-to-write-resume.html
@@ -26,9 +26,9 @@
         <a href="#" class="logo">Resumee.</a>
         <nav class="navbar nav-skw">
             <ul class="nav-menu">
-                <li><a class="nav-item" href="/index.html#resTemp">Resume Templates</a></li>
-                <li><a class="nav-item" href="/index.html#cvBlogs">CV Blogs</a></li>
-                <li><a class="nav-item" href="/index.html#testMSec">Cover Testimonial</a></li>
+                <li><a class="nav-item" href="../index.html#resTemp">Resume Templates</a></li>
+                <li><a class="nav-item" href="../index.html#cvBlogs">CV Blogs</a></li>
+                <li><a class="nav-item" href="../index.html#testMSec">Cover Testimonial</a></li>
                 <li id="reg"><a class="nav-item" href="#">Register</a></li>
                 <li id="sig"><a class="nav-item" href="#">Sign In</a></li>
             </ul>
