--- a/blogs/some-resume-examples-guides.html
+++ b/blogs/some-resume-examples-guides.html
@@ -26,9 +26,9 @@
         <a href="#" class="logo">Resumee.</a>
         <nav class="navbar nav-skw">
             <ul class="nav-menu">
-                <li><a class="nav-item" href="/index.html#resTemp">Resume Templates</a></li>
-                <li><a class="nav-item" href="/index.html#cvBlogs">CV Blogs</a></li>
-                <li><a class="nav-item" href="/index.html#testMSec">Cover Testimonial</a></li>
+                <li><a class="nav-item" href="../index.html#resTemp">Resume Templates</a></li>
+                <li><a class="nav-item" href="../index.html#cvBlogs">CV Blogs</a></li>
+                <li><a class="nav-item" href="../index.html#testMSec">Cover Testimonial</a></li>
                 <li id="reg"><a class="nav-item" href="#">Register</a></li>
                 <li id="sig"><a class="nav-item" href="#">Sign In</a></li>
             </ul>
@@ -43,7 +43,7 @@
         <article class="article">
             <h1>Resume Examples & Guide Of IT Profesionals | Beginners Guide</h1>
             <div class="article-img">
-                <img src="/img/resume-guide-img.webp" alt="Resume Examples & Guide">
+                <img src="../img/resume-guide-img.webp" alt="Resume Examples & Guide">
             </div>
             <div class="article-content">
                 <p>
@@ -110,7 +110,7 @@
     <footer class="footer-section">
         <div class="outer-foot">
             <div class="inner-foot">
-                <img src="/img/Resume-Footer-Logo.png" alt="Footer Image" class="foot-logo">
+                <img src="../img/Resume-Footer-Logo.png" alt="Footer Image" class="foot-logo">
                 <!-- src="./img/footer-logo.png" -->
                 <p id="inP">Showcase yourself and your achievements with an impressive resume made with the free online
                     resume
@@ -132,10 +132,10 @@
                 <h3>Links <div class="underline"><span></span></div>
                 </h3>
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/index.html#resTemp">Resume Templates</a></li>
-                    <li><a href="/index.html#cvBlogs">CV Blogs</a></li>
-                    <li><a href="/index.html#testMSec">Cover Guidance</a></li>
+                    <li><a href="../index.html">Home</a></li>
+                    <li><a href="../index.html#resTemp">Resume Templates</a></li>
+                    <li><a href="../index.html#cvBlogs">CV Blogs</a></li>
+                    <li><a href="../index.html#testMSec">Cover Guidance</a></li>
                     <li><a href="#">About US | Contact US</a></li>
                 </ul>
             </div>
