--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         <p class="copyright">OmDEV &copy; 2022 - All Rights Reserved</p>
     </footer>
 
-    <script src="/index.js"></script>
+    <script src="./index.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
 
 </body>
