--- a/index.html
+++ b/index.html
@@ -256,10 +256,10 @@
                 <h3>Links <div class="underline"><span></span></div>
                 </h3>
                 <ul>
-                    <li><a href="../index.html">Home</a></li>
-                    <li><a href="../index.html#resTemp">Resume Templates</a></li>
-                    <li><a href="../index.html#cvBlogs">CV Blogs</a></li>
-                    <li><a href="../index.html#testMSec">Cover Guidance</a></li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./index.html#resTemp">Resume Templates</a></li>
+                    <li><a href="./index.html#cvBlogs">CV Blogs</a></li>
+                    <li><a href="./index.html#testMSec">Cover Guidance</a></li>
                     <li><a href="#">About US | Contact US</a></li>
                 </ul>
             </div>
